objects/Jobs__x.object
<CustomObject><fields>
        <fullName>Compensation_frequency__c</fullName>
        <description>Compensation_frequency</description>
        <externalDeveloperName>Compensation_frequency</externalDeveloperName>
        <label>Compensation Frequency</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Currency__c</fullName>
        <description>Currency</description>
        <externalDeveloperName>Currency</externalDeveloperName>
        <label>Currency</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Employee_type__c</fullName>
        <description>Employee_type</description>
        <externalDeveloperName>Employee_type</externalDeveloperName>
        <label>Employee Type</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Grade_level__c</fullName>
        <description>Grade_level</description>
        <externalDeveloperName>Grade_level</externalDeveloperName>
        <label>Grade Level</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Job_category__c</fullName>
        <description>Job_category</description>
        <externalDeveloperName>Job_category</externalDeveloperName>
        <label>Job Category</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_code__c</fullName>
        <description>Job_code</description>
        <externalDeveloperName>Job_code</externalDeveloperName>
        <label>Job Code</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_description__c</fullName>
        <description>Job_description</description>
        <externalDeveloperName>Job_description</externalDeveloperName>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_family__c</fullName>
        <description>Job_family</description>
        <externalDeveloperName>Job_family</externalDeveloperName>
        <label>Job Family</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_status__c</fullName>
        <description>Job_status</description>
        <externalDeveloperName>Job_status</externalDeveloperName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_title__c</fullName>
        <description>Job_title</description>
        <externalDeveloperName>Job_title</externalDeveloperName>
        <label>Job Title</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Maximum_salary__c</fullName>
        <description>Maximum_salary</description>
        <externalDeveloperName>Maximum_salary</externalDeveloperName>
        <label>Maximum Salary</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mid_point_salary__c</fullName>
        <description>Mid_point_salary</description>
        <externalDeveloperName>Mid_point_salary</externalDeveloperName>
        <label>Mid Point Salary</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Minimum_salary__c</fullName>
        <description>Minimum_salary</description>
        <externalDeveloperName>Minimum_salary</externalDeveloperName>
        <label>Minimum Salary</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Standard_hours__c</fullName>
        <description>Standard_hours</description>
        <externalDeveloperName>Standard_hours</externalDeveloperName>
        <label>Standard Hours</label>
        <length>128</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Standard_work_period__c</fullName>
        <description>Standard_work_period</description>
        <externalDeveloperName>Standard_work_period</externalDeveloperName>
        <label>Standard Work Period</label>
        <length>128</length>
        <type>Text</type>
    </fields><deploymentStatus>Deployed</deploymentStatus><description>Jobs</description><enableFeeds>true</enableFeeds><enableReports>false</enableReports><enableSearch>true</enableSearch><externalDataSource>Workday</externalDataSource><externalName>Jobs</externalName><label>Jobs</label><pluralLabel>Jobs</pluralLabel><listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>Job_title__c</columns>
        <columns>Job_description__c</columns>
        <columns>Job_category__c</columns>
        <columns>Job_status__c</columns>
        <columns>Maximum_salary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>